Add root page, layout page, react routing file.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Shopping_cart</title>
 </head>
 
-<body>
+<body
+  class="bg-db text-neutral-300 scrollbar-thin scrollbar-track-[#ffffff0a] scrollbar-thumb-rounded-lg scrollbar-thumb-[#6e3aff]">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
