Change tailwind for UnoCSS.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>Shopping_cart</title>
 </head>
 
-<body
-  class="bg-db text-neutral-300 scrollbar-thin scrollbar-track-[#ffffff0a] scrollbar-thumb-rounded-lg scrollbar-thumb-[#6e3aff]">
+<body class="bg-db text-neutral-3 scrollbar">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
