--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Shopping_cart</title>
 </head>
 
-<body class="bg-db text-neutral-3 scrollbar">
+<body class=" bg-neutral-3 text-neutral-9 dark:(bg-db text-neutral-3) scrollbar">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
